feat(basic): #12 add temporal parsing in query string
refs #12