@@ -64,6 +64,7 @@
             --add-opens juery.api/fr.ght1pc9kc.juery.api.filter=ALL-UNNAMED
             --add-opens juery.basic/fr.ght1pc9kc.juery.basic=ALL-UNNAMED
             --add-opens juery.basic/fr.ght1pc9kc.juery.basic.filter=ALL-UNNAMED
+            --add-opens juery.basic/fr.ght1pc9kc.juery.basic.utils=ALL-UNNAMED
             --add-opens juery.jooq/fr.ght1pc9kc.juery.jooq.pagination=ALL-UNNAMED
             --add-opens juery.jooq/fr.ght1pc9kc.juery.jooq.filter=ALL-UNNAMED
         </surefire.argline.opens>
